# noxe

./: Cargo.toml  LICENSE  README.md  api-key.txt  foo.c  foo.json  foo.txt  noxe.fish
src/: cli.rs  main.rs  note.rs  process.rs  tui.rs
tests/fixtures/note_dir/: note_file1.typ  note_file2.md
tests/fixtures/note_dir/cat1/: cat1_note_file.typ
tests/fixtures/note_dir/cat1/cat1_note_dir1/: main.typ
tests/fixtures/note_dir/cat1/cat1_note_dir2/: main.typ
tests/fixtures/note_dir/cat1/cat1_note_dir2/bibliography/: refs.bib
tests/fixtures/note_dir/cat1/sub_cat1/: sub_cat1_note_file.typ
tests/fixtures/note_dir/cat1/sub_cat1/sub_cat1_note_dir/: main.typ
tests/fixtures/note_dir/cat2/: cat2_note_file.md
tests/fixtures/note_dir/cat2/cat1_note_dir1/: main.typ
tests/fixtures/note_dir/cat2/cat2_note_dir/: main.typ
