[package]
name = "noxe"
version = "0.1.0"
edition = "2024"
author = "sqfzy"
description = "A simple tool to manage and preview your notes."
license = "MIT"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive", "env", "cargo"] }
chrono = "0.4"
anyhow = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.11.1"
colored = "3.0.0"
ignore = { git = "https://github.com/sqfzy/ripgrep.git" }

[dev-dependencies]
tempfile = "3.15.0"
