[package]
name = "noxe"
version = "0.4.0"
edition = "2024"
author = "sqfzy"
description = "A simple tool to manage and preview your notes."
license = "MIT"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive", "env", "cargo"] }
chrono = "0.4"
anyhow = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.11.1"
colored = "3.0.0"
ignore = { git = "https://github.com/sqfzy/ripgrep.git", barnch = "master" }
tuirealm = "2.0.3"
# async-openai = "0.27.2"
ureq = { version = "3.0.6", features = ["json"] }
serde_json = "1.0.138"
# curl = "0.4.47"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# attohttpc = { version = "0.28.4", features = ["json"] }

[dev-dependencies]
tempfile = "3.15.0"


[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
